  functionality in this module.

[ ENHANCEMENTS ]

- This module no longer used Net::Works internally. This was done to improve
  performance.
- insert_range() was added to MaxMind::DB::Writer::Tree to provide a mechanism
  for adding IP address ranges that are not well-defined networks.
- remove_network() was added to MaxMind::DB::Writer::Tree to facilitate
  removing a network from a tree.


0.100007 2016-03-24

- MaxMind::DB::Writer::Tree->new now accepts a merge_strategy parameter. When
  merge_record_collisions is set, the default merge strategy is "toplevel",
  which only merges the top level of the record hash. A new "recurse" merge
  strategy has been added, which recursively merged the records data
  structure, including both arrays and hashes. Please see the documentation
  for more details.


0.100006 2016-01-18

- The documentation incorrectly stated the the MaxMind::DB::Writer::Tree->new
  parameter "map_key_type_callback" was optional. It is actually required.


0.100005 2015-10-26

- $tree->insert_network now takes an optional additional-arguments hash
  reference parameter. If this hash contains a truthy value for the
  force_overwrite key, any data for the network will be overwritten even when
  merge_record_collisions is enabled.


0.100004 2015-07-15

- Previously two equivalent data structures added to a database could end up
  with different keys, causing both to be added to the final file separately.
  The key generation was updated to reduce the likelihood of this happening.


0.100003 2015-06-04

- Fixed a bug in the data thawing code that incorrectly incremented the
  SV referencing the HV rather than the HV. This could cause warnings about
  attempts to free an unreferenced SV.
- Fixed memory leaks on merge failures.
- Minor code cleanups.


0.100002 2015-04-23

- Fixed test suite on OS X: Altered to cope with different Net::Works network
  rendering on OS X


0.100001 2015-03-12
