@@ -107,7 +107,8 @@ typedef struct MMDBW_network_s {
     /* *INDENT-OFF* */
     /* --prototypes automatically generated by dev-bin/regen-prototypes.pl - don't remove this comment */
     extern MMDBW_tree_s *new_tree(const uint8_t ip_version, uint8_t record_size,
-                                  MMDBW_merge_strategy merge_strategy);
+                                  MMDBW_merge_strategy merge_strategy,
+                                  const bool alias_ipv6);
     extern void insert_network(MMDBW_tree_s *tree, const char *ipstr,
                                const uint8_t prefix_length, SV *key, SV *data,
                                bool force_overwrite);
@@ -116,7 +117,6 @@ typedef struct MMDBW_network_s {
                              bool force_overwrite);
     extern void remove_network(MMDBW_tree_s *tree, const char *ipstr,
                                const uint8_t prefix_length);
-    extern void alias_ipv4_networks(MMDBW_tree_s *tree);
     extern SV *merge_hashes_for_keys(MMDBW_tree_s *tree, const char *const key_from,
                                      const char *const key_into, MMDBW_network_s *network);
     extern SV *lookup_ip_address(MMDBW_tree_s *tree, const char *const ipstr);
@@ -126,9 +126,9 @@ typedef struct MMDBW_network_s {
                             size_t frozen_params_size);
     extern MMDBW_tree_s *thaw_tree(char *filename, uint32_t initial_offset,
                                    uint8_t ip_version, uint8_t record_size,
-                                   MMDBW_merge_strategy merge_strategy);
+                                   MMDBW_merge_strategy merge_strategy,
+                                   const bool alias_ipv6);
     extern void write_search_tree(MMDBW_tree_s *tree, SV *output,
-                                  const bool alias_ipv6,
                                   SV *root_data_type, SV *serializer);
     extern void start_iteration(MMDBW_tree_s *tree,
                                 bool depth_first,
